<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/globalMargin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/h1"
        android:textColor="@color/mainLabel"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:textSize="@dimen/h2"
        android:text="@string/label_et_input_sum"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/mainLabel"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:textSize="@dimen/et"
        android:maxLines="1"
        android:background="#e7e3e7"
        android:id="@+id/input_sum"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h2"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/label_et_result"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/mainLabel"
        android:background="#e7e3e7"
        android:textSize="@dimen/et"
        android:id="@+id/output_result"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h2"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/label_sp_choose_currency"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/mainLabel"
        android:id="@+id/spConvertFrom"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h2"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/label_sp_convert_to"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/mainLabel"
        android:id="@+id/spConvertTo"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:id="@+id/rgType"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radio_nbu"
            android:id="@+id/rNbu"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radio_buy"
            android:id="@+id/rBuy"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radio_sell"
            android:id="@+id/rSell"/>

    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topMargin"
        android:gravity="center_horizontal"
        android:background="#e7e3e7"
        android:inputType="numberDecimal"
        android:textSize="@dimen/et"
        android:maxLines="1"
        android:id="@+id/exchangeRate"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnConvert"
        android:layout_marginTop="@dimen/topMargin"
        android:text="@string/btn_calculate"/>

</LinearLayout>
</ScrollView>